--- a/master/website/board/templates/board2/cc_materialcost_if.html
+++ b/master/website/board/templates/board2/cc_materialcost_if.html
@@ -139,9 +139,9 @@
                                 <th>계정코드</th>
                                 <th>계정명</th>
                                 <th>모품목코드</th>
-                                <th>모품목명</th>
+<!--                                 <th>모품목명</th> -->
                                 <th>자품목코드</th>
-                                <th>자품목명</th>
+<!--                                 <th>자품목명</th> -->
                                 <th>수량</th>
                                 <th>금액</th>
                             </tr>
